--- a/Cervical Cancer Neural Network Keras.ipynb
+++ b/Cervical Cancer Neural Network Keras.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic multilayer perceptron feedforward neural network for predicting a binary classification of cervical cancer risk factors leading to biopsy"
+    "### If the following notebook fails to load completely, please access it using the NBViewer located at the link below:\n",
+    "https://nbviewer.jupyter.org/github/carkar7/Neural-Network-Cervical-Cancer-Risk-Factors/blob/master/Cervical%20Cancer%20Neural%20Network%20Keras.ipynb\n",
+    "\n",
+    "\n",
+    "# Introduction\n",
+    "Basic multilayer perceptron feedforward neural network for predicting a binary classification of cervical cancer risk factors leading to biopsy"
    ]
   },
   {
